examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/simple_list_reconstruct.st
language core;

extend with #type-reconstruction, #lists;

fn main(arg : auto) -> Nat {
  return [arg, 0]
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
